@@ -223,6 +223,10 @@ ai_worker_requirement_percent = 150
 ; position. The intended behavior was for them to search for targets on all surrounding tiles up to 6 steps away. This bug was caused by a small,
 ; sloppy programming mistake that can be corrected with a small edit. For details, see:
 ;   https://forums.civfanatics.com/threads/c3x-exe-mod-including-bug-fixes-stack-bombard-and-much-more.666881/page-70#post-16434678
+;   DISEASE CURING TECH FLAG BUG -- In the base game, the tech flag "Disables Diseases From Flood Plains" (applied to Sanitation) does nothing and
+; instead flood plains disease stops once players discover Writing. This happens because that flag is encoded as number 8 and, instead of checking if
+; players have a tech with that flag, the code mistakenly checks if players have tech #8, which is Writing under the standard rules. Correcting this
+; bug causes a lot more disease, which is a major annoyance, and so this bug fix is turned off by default.
 
 patch_submarine_bug = true
 patch_science_age_bug = true
@@ -233,6 +237,7 @@ patch_intercept_lost_turn_bug = true
 patch_phantom_resource_bug = true
 patch_maintenance_persisting_for_obsolete_buildings = true
 patch_barbarian_diagonal_bug = true
+patch_disease_stopping_tech_flag_bug = false
 
 [=========================]
 [=== ENGINE EXTENSIONS ===]
