@@ -1,3 +1,5 @@
+- Fix bug related to "Disables Diseases From Flood Plains" tech flag
+  - Option named patch_disease_stopping_tech_flag_bug, off by default b/c this fix causes a lot more disease under the standard rules
 - Fix free unit glitch from switching production to a building through the unit limit reached popup
 
 * RELEASE 20 PREVIEW 1
